# einsumcorr

./: CLAUDE.md  README.md  combined_transcripts.html  performance_analysis.ipynb  pyproject.toml
src/einsumcorr/: __init__.py  cli.py  optcorr.py
tests/: test_main.py  test_optcorr.py  test_performance.py
