[project]
name = "einsumcorr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Russell Poldrack", email = "poldrack@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "opt-einsum>=3.3.0",
    "matplotlib>=3.10.5",
    "pandas>=2.3.2",
    "seaborn>=0.13.2",
    "jupyter>=1.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
einsumcorr = "einsumcorr:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]
